--- a/LinkedList/LinkedList/LinkedList.csproj
+++ b/LinkedList/LinkedList/LinkedList.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{62F6FD2F-31D6-48EA-A3FD-5BF186B38E60}</ProjectGuid>
+    <ProjectGuid>{D3CAEAB3-167F-4069-B0F6-4A65BEB7407E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Doubly_linked_list</RootNamespace>
-    <AssemblyName>Doubly_linked_list</AssemblyName>
+    <RootNamespace>LinkedList</RootNamespace>
+    <AssemblyName>LinkedList</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
